# GESTION-ECOLE

./: .gitignore  CLAUDE.md  GESTION-EE.md
Backend/: .env.example  .gitignore  Dockerfile  Makefile  TESTING.md  docker-compose.yml  pyproject.toml
Backend/alembic/: README  env.py
Backend/alembic/versions/: 0001_initial_schema.py  0002_phase2_perf_indexes.py  0003_phase3_postgis.py  0004_phase10_school_infra_inspections.py  0005_phase11_finance_budget.py  0006_phase13_schoollife.py  0007_phase13bis_settings.py  0008_auth_hardening.py  0009_census_normalization.py  0010_attendance_partition.py  0011_reports_async.py  0012_i18n_and_workflow_sla.py  0013_schoollife.py  0014_predictions.py  0015_anomalies.py  0016_assistant.py  0017_diplomas.py  0018_opendata.py  0019_sms_ussd.py  0020_admin_settings.py  0021_parent_portal.py  0022_cockpit.py  0023_enrollment.py  0024_gender_parity.py  0025_zone_type.py  0026_transition_rates.py  0027_projections.py  0028_capacity_demand.py  0029_teacher_recommendations.py  0030_what_if_scenarios.py  0031_investment_priority.py  0032_pii_access_log.py  0033_right_to_be_forgotten.py  0034_user_consent.py
Backend/app/: main.py
Backend/app/core/: celery_app.py  config.py  database.py  exceptions.py  maintenance.py  observability.py  proxy.py  rate_limit.py  redis.py  security.py
Backend/app/modules/: __init__.py
Backend/app/modules/academics/: models.py  router.py  schemas.py  service.py
Backend/app/modules/admin/: README.md  enums.py  models.py  router.py  service.py
Backend/app/modules/analytics/: __init__.py  router.py  schemas.py  service.py
Backend/app/modules/anomalies/: README.md  detectors.py  enums.py  models.py  router.py  schemas.py  service.py
Backend/app/modules/assistant/: README.md  enums.py  models.py  router.py  schemas.py  scripted.py  service.py  tools.py
Backend/app/modules/attendance/: README.md  models.py  partitions.py  router.py  schemas.py  service.py
Backend/app/modules/auth/: README.md  mfa.py  models.py  router.py  schemas.py  service.py
Backend/app/modules/cartography/: README.md  __init__.py  isochrones.py  layers.py  router.py  schemas.py  service.py  tiles.py
Backend/app/modules/census/: README.md  duplicates.py  models.py  normalization.py  router.py  schemas.py  service.py
Backend/app/modules/cockpit/: README.md  __init__.py  enums.py  models.py  router.py  schemas.py  service.py
Backend/app/modules/consent/: README.md  __init__.py  enums.py  models.py  router.py  schemas.py  service.py
Backend/app/modules/diplomas/: README.md  crypto.py  enums.py  models.py  router.py  schemas.py  serial.py  service.py
Backend/app/modules/enrollment/: README.md  enums.py  models.py  parity.py  router.py  schemas.py  service.py
Backend/app/modules/erasure/: README.md  __init__.py  anonymizer.py  enums.py  models.py  router.py  schemas.py  service.py
Backend/app/modules/finance/: models.py  router.py  schemas.py  service.py
Backend/app/modules/imports/: __init__.py  parsers.py  router.py  schemas.py  service.py  templates.py
Backend/app/modules/inspections/: models.py  router.py  schemas.py  service.py
Backend/app/modules/investment/: __init__.py  enums.py  models.py  router.py  schemas.py  scoring.py  service.py
Backend/app/modules/notifications/: README.md  __init__.py  dispatcher.py  i18n.py  models.py  router.py  schemas.py  service.py  templates.py
Backend/app/modules/opendata/: README.md  __init__.py  anonymization.py  datasets.py  models.py  router.py  schemas.py  service.py
Backend/app/modules/parent_portal/: README.md  __init__.py  enums.py  intent_parser.py  models.py  router.py  schemas.py  service.py  whatsapp.py
Backend/app/modules/pii_audit/: README.md  __init__.py  decorators.py  enums.py  models.py  router.py  schemas.py  service.py
Backend/app/modules/predictions/: README.md  enums.py  features.py  model.py  models.py  router.py  schemas.py  service.py  training.py
Backend/app/modules/projections/: README.md  __init__.py  capacity.py  enums.py  models.py  projection.py  router.py  schemas.py  service.py  staffing.py  transitions.py
Backend/app/modules/realtime/: README.md  events.py  router.py  scope_channels.py  service.py
Backend/app/modules/reports/: README.md  __init__.py  router.py  schemas.py  service.py  storage.py  template.py
Backend/app/shared/: base.py  deps.py  enums.py  pagination.py  permissions.py
Backend/app/workers/: anomaly_tasks.py  attendance_tasks.py  cockpit_tasks.py  enrollment_tasks.py  erasure_tasks.py  geocoding_tasks.py  import_tasks.py  notification_tasks.py  pdf_tasks.py  pii_audit_tasks.py  prediction_tasks.py  projection_tasks.py  sms_tasks.py  workflow_tasks.py
Backend/scripts/: create_test_db.sh  drop_test_db.sh  seed_demo_full.py
Backend/tests/: conftest.py  test_health.py  test_phase10_contracts.py  test_phase11_contracts.py  test_phase1_contracts.py  test_phase2_contracts.py  test_phase3_contracts.py  test_phase4_contracts.py  test_phase5_contracts.py  test_phase6_contracts.py  test_phase7_contracts.py  test_phase8_contracts.py  test_security.py
Backend/tests/integration/: __init__.py  conftest.py  factories.py  test_admin_module15.py  test_anomalies_module9.py  test_assistant_module10.py  test_attendance_module3.py  test_auth_module1.py  test_capacity_module_2c.py  test_cartography_layers_module_3a.py  test_cartography_module5.py  test_census_module2.py  test_cockpit_module19.py  test_consent_module_5b.py  test_diplomas_module11.py  test_enrollment_module_1a.py  test_enrollment_module_1b.py  test_erasure_module_5d.py  test_investment_module_3c.py  test_opendata_module12.py  test_parent_portal_module18.py  test_pii_audit_module_5c.py  test_predictions_module8.py  test_projection_module_2b.py  test_realtime_module13.py  test_reports_module4.py  test_schoollife_module7.py  test_simulator_module_3b.py  test_smoke.py  test_sms_module14.py  test_staffing_module_2d.py  test_transitions_module_2a.py  test_workflow_i18n_module6.py  test_zone_type_module_1c.py
Backend/tests/load/: README.md  __init__.py  locustfile.py
(+635 files in other folders)
