[project]
name = "gestion-ee-backend"
version = "0.1.0"
description = "GESTION-EE — Plateforme nationale de gestion scolaire (Backend Python)"
readme = "../GESTION-EE.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    # Web framework
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "email-validator>=2.2.0",
    "python-multipart>=0.0.12",
    # Database
    "sqlalchemy[asyncio]>=2.0.36",
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.10",  # for Alembic offline migrations
    "geoalchemy2>=0.16.0",       # PostGIS support
    # Cache & queue
    "redis[hiredis]>=5.2.0",
    "celery[redis]>=5.4.0",
    # Security
    "argon2-cffi>=23.1.0",
    "pyjwt[crypto]>=2.10.0",
    "passlib[bcrypt]>=1.7.4",   # to verify legacy NestJS bcrypt hashes
    "cryptography>=43.0.0",
    "pyotp>=2.9.0",              # TOTP RFC 6238 (Module 1 MFA)
    # Identifiers
    "cuid2>=2.0.1",              # match Prisma cuid() defaults
    # PDF (bulletins) & QR
    "weasyprint>=63.0",
    "qrcode[pil]>=8.0",
    # Files / imports
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "boto3>=1.35.0",             # S3 / MinIO
    # HTTP client (notifications)
    "httpx>=0.28.0",
    # Observability
    "loguru>=0.7.2",
    "sentry-sdk[fastapi]>=2.18.0",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "anthropic>=0.99.0",
    # Fuzzy matching (Module 2 — census dédoublonnage)
    "rapidfuzz>=3.10.0",
    # Module 8 — Prédictions ML (dropout)
    "scikit-learn>=1.5.0",
    "joblib>=1.4.0",
    "numpy>=2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-xdist>=3.6.0",
    "httpx>=0.28.0",
    "factory-boy>=3.3.1",
    "faker>=33.0.0",
    "freezegun>=1.5.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "types-redis>=4.6.0",
    "locust>=2.32.0",
    # Module 4 — mock S3 / boto3 in tests
    "moto>=5.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["E501", "B008"]  # B008 = needed for FastAPI Depends()

[tool.ruff.lint.per-file-ignores]
"app/modules/*/models.py" = ["F401"]
# Module 7 — schoollife exporte des champs en camelCase pour rester aligné
# avec les conventions Prisma de la base. On accepte N815/N803 sur tout le
# package (schemas, services, routers).
"app/modules/schoollife/*" = ["N801", "N803", "N815"]
# Module 8 — predictions : X/y sont la convention sklearn, et on a aussi
# des colonnes camelCase (Prisma) côté ORM. On tolère N803/N806/N815/N801.
"app/modules/predictions/*" = ["N801", "N803", "N806", "N815"]
"app/workers/prediction_tasks.py" = ["N801", "N803", "N815"]
# Module 9 — anomalies : colonnes camelCase (Prisma) côté ORM, et schemas
# Pydantic exposent les mêmes noms au frontend Angular.
"app/modules/anomalies/*" = ["N801", "N803", "N806", "N815"]
"app/workers/anomaly_tasks.py" = ["N801", "N803", "N815"]
# Module 10 — assistant LLM : mêmes raisons que ci-dessus (camelCase Prisma
# + UP037 toléré pour les "User" forward-refs qui evitent les circulaires).
"app/modules/assistant/*" = ["N801", "N803", "N806", "N815", "UP037"]
# Module 11 — diplômes signés Ed25519 : colonnes camelCase (Prisma) côté ORM
# + forward-refs "User"/"Student"/"School" pour éviter les imports circulaires
# côté service. RUF002/RUF003 tolérés pour les commentaires/docstrings FR.
"app/modules/diplomas/*" = ["N801", "N803", "N806", "N815", "UP037", "RUF002", "RUF003"]
# Module 12 — open data : colonnes camelCase (Prisma) côté ORM + champs
# mixedCase (regionName, schoolCount…) dans les datasets publics. RUF002/
# RUF003 tolérés pour les docstrings FR.
"app/modules/opendata/*" = ["N801", "N803", "N806", "N815", "UP037", "RUF002", "RUF003"]
# Module 13 — realtime WebSocket : payloads camelCase (schoolId/regionId/
# occurredAt) pour rester aligné avec le frontend Angular. ?userId= en query
# param respecte le contrat WS legacy.
"app/modules/realtime/*" = ["N801", "N803", "N815"]
# Les factories et fixtures de tests refletent les noms de colonnes Prisma
# (camelCase) — on tolere donc N803/N815/N801 dans tests/. Et `from app.modules
# import *` est intentionnel pour declencher l'enregistrement des modeles
# sur Base.metadata avant create_all().
"tests/integration/*" = ["N801", "N803", "N806", "N815", "F401", "F403", "RUF100", "UP037"]
"tests/load/*" = ["N801", "N803", "N815"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["alembic/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
# Indispensable pour la suite d'integration : nos fixtures DB/Redis sont
# session-scoped et asyncpg n'accepte pas qu'on les utilise depuis un autre
# event loop. Les tests function-scoped continuent de tourner normalement
# (le scope du test reste "function" — seul le loop est partage).
asyncio_default_test_loop_scope = "session"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.coverage.run]
source = ["app"]
omit = ["app/main.py", "alembic/*"]

[tool.coverage.report]
# Module 0 : on mesure, on ne bloque pas encore. Les modules 1+ pourront
# remonter `fail_under` au fur et a mesure.
fail_under = 0
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
